# clawdbot-railway-template

./: .gitignore  Dockerfile  decode-gcal-creds.sh  docker-entrypoint.sh  mcporter.json  requirements.txt
blog-cli/: pyproject.toml
blog-cli/blog_cli/: __init__.py  api.py  cli.py  config.py  image_gen.py  output.py  seo.py  templates.py  wordpress.py
patches/: openclaw-railway-google-oauth.patch  openclaw-telegram-build-id.patch
src/: server.js  setup-app.js
